--- a/src/styles/base/_base.scss
+++ b/src/styles/base/_base.scss
@@ -4,8 +4,9 @@ html {
 }
 
 body {
-    font-family: Helvetica, Arial, sans-serif;
+    font-family: 'Roboto', sans-serif;
     font-size: $m-size;
+    line-height: 1.6;
 }
 
 button {
