--- a/src/styles/base/_settings.scss
+++ b/src/styles/base/_settings.scss
@@ -4,3 +4,9 @@ $s-size: 1.2rem;
 $m-size: 1.6rem; //medium size
 $l-size: 3.2rem; //large size
 $xl-size: 4.8rem; //extra large size
+
+//Colors
+$matt-black: #272727;
+
+//Spacing
+$desktop-breakpoint: 45rem;
