--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -2,3 +2,7 @@
 @import './base/base';
 @import './components/box-layout';
 @import './components/button';
+@import './components/header';
+@import './components/content-container';
+@import './components/page-header';
+@import './components/expense-list-filter'
