styled add expense form, edit expense form, and started styling on expense list

--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -5,4 +5,8 @@
 @import './components/header';
 @import './components/content-container';
 @import './components/page-header';
-@import './components/expense-list-filter'
+@import './components/expense-list-filter';
+@import './components/inputs';
+@import './components/form';
+@import './components/visibility';
+@import './components/list';
