--- a/src/styles/base/_settings.scss
+++ b/src/styles/base/_settings.scss
@@ -6,7 +6,8 @@ $l-size: 3.2rem; //large size
 $xl-size: 4.8rem; //extra large size
 
 //Colors
-$matt-black: #272727;
+$primary-purple: #4C1E59;
+$secondary-purple: #78308C;
 
 //Spacing
 $desktop-breakpoint: 45rem;
