--- a/src/styles/components/_button.scss
+++ b/src/styles/components/_button.scss
@@ -2,7 +2,7 @@
   border-radius: 10px;
   padding: 15px 10px;
   font-size: 20px;
-  background: #272727;
+  background: $secondary-purple;
   color: white;
   margin-bottom: 10px;
   transition: all 0.2s;
